# thesis-template

./: CMakeLists.txt  LICENSE  Makefile  README.md
code/: CMakeLists.txt
doc/: README.md
paper/: CMakeLists.txt
paper/src/: CMakeLists.txt  kotestabla.tex  szakdolgozat.tex
paper/src/bib/: cites.bib
paper/src/eps/: dataflow_svg.eps
paper/src/img/: dataflow_eps.eps
scripts/: arg-parser.sh  convert-grayscale.sh  do-release.sh  fetch-code.sh  install-deps.sh  pictures-to-eps.sh  svg-to-eps.sh
